Revise API url
